# Coursework_5.1

./: README.md  base_parser.py  file_manager.py  hh_parser.py  main.py  pyproject.toml  requirements.txt  result.csv  result.json  superjob_parser.py  test.py  vacancy_parser.py
managers/: csv_manager.py  json_manager.py
parcers/: base_parser.py  hh_parser.py  superjob_parser.py  vacancy_parser.py
